--- a/src/it/gov/itisfeltrinelli/compleannoamichi/AmichiView.fxml
+++ b/src/it/gov/itisfeltrinelli/compleannoamichi/AmichiView.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Separator?>
@@ -85,7 +86,7 @@
                </VBox.margin></Separator>
             <HBox spacing="1.0">
                <children>
-                  <Button fx:id="btProssimo" mnemonicParsing="false" onAction="#onProsimo" text="Prossimo">
+                  <Button fx:id="btProssimo" mnemonicParsing="false" onAction="#onProsimo" prefHeight="26.0" prefWidth="65.0" text="Prossimo">
                      <HBox.margin>
                         <Insets left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
@@ -100,6 +101,26 @@
                <VBox.margin>
                   <Insets bottom="10.0" top="10.0" />
                </VBox.margin>
+            </HBox>
+            <Separator prefWidth="805.0" />
+            <HBox>
+               <children>
+                  <Button fx:id="btnLista" mnemonicParsing="false" onAction="#onLista" prefHeight="26.0" prefWidth="65.0" text="Lista">
+                     <HBox.margin>
+                        <Insets left="10.0" right="10.0" top="20.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Separator orientation="VERTICAL" prefHeight="50.0">
+                     <HBox.margin>
+                        <Insets bottom="10.0" top="10.0" />
+                     </HBox.margin>
+                  </Separator>
+                  <ListView fx:id="lwAmici" prefHeight="200.0" prefWidth="656.0">
+                     <HBox.margin>
+                        <Insets bottom="10.0" left="10.0" top="10.0" />
+                     </HBox.margin>
+                  </ListView>
+               </children>
             </HBox>
          </children>
       </VBox>
