--- a/src/it/gov/itisfeltrinelli/compleannoamichi/AmichiView.fxml
+++ b/src/it/gov/itisfeltrinelli/compleannoamichi/AmichiView.fxml
@@ -105,11 +105,25 @@
             <Separator prefWidth="805.0" />
             <HBox>
                <children>
-                  <Button fx:id="btnLista" mnemonicParsing="false" onAction="#onLista" prefHeight="26.0" prefWidth="65.0" text="Lista">
-                     <HBox.margin>
-                        <Insets left="10.0" right="10.0" top="20.0" />
-                     </HBox.margin>
-                  </Button>
+                  <VBox prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <Button fx:id="btnLista" alignment="TOP_CENTER" mnemonicParsing="false" onAction="#onLista" prefHeight="26.0" prefWidth="65.0" text="Lista">
+                           <VBox.margin>
+                              <Insets left="10.0" top="10.0" />
+                           </VBox.margin>
+                        </Button>
+                        <Label text="Numero Record">
+                           <VBox.margin>
+                              <Insets left="10.0" top="20.0" />
+                           </VBox.margin>
+                        </Label>
+                        <TextField fx:id="txtRecord">
+                           <VBox.margin>
+                              <Insets left="10.0" right="10.0" top="10.0" />
+                           </VBox.margin>
+                        </TextField>
+                     </children>
+                  </VBox>
                   <Separator orientation="VERTICAL" prefHeight="50.0">
                      <HBox.margin>
                         <Insets bottom="10.0" top="10.0" />
