--- a/src/gui/AmichiView.fxml
+++ b/src/gui/AmichiView.fxml
@@ -122,6 +122,16 @@
                               <Insets left="10.0" right="10.0" top="10.0" />
                            </VBox.margin>
                         </TextField>
+                        <Button fx:id="idLoad" mnemonicParsing="false" onAction="#onLoad" text="Load">
+                           <VBox.margin>
+                              <Insets left="27.0" top="10.0" />
+                           </VBox.margin>
+                        </Button>
+                        <Button fx:id="idSave" disable="true" mnemonicParsing="false" onAction="#onSave" text="Save">
+                           <VBox.margin>
+                              <Insets left="27.0" top="10.0" />
+                           </VBox.margin>
+                        </Button>
                      </children>
                   </VBox>
                   <Separator orientation="VERTICAL" prefHeight="50.0">
